--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "dompurify": "^3.1.7"
+        "dompurify": "^3.1.7",
+        "laravel-echo": "^1.16.1",
+        "lodash": "^4.17.21",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
